# MCH3D

./: README.md
app/: CMakeLists.txt  bitval.c  clipping.c  main.c  precalc.c  qs_core.c  qs_render.c  qsapp.c  st_nicc.c  types.c
app/include/: bitval.h  clipping.h  main.h  main_debug.h  precalc.h  qs_core.h  qs_render.h  qsapp.h  st_nicc.h  types.h
docs/: MCH3D.drawio  cache_controller.md  design.md
fpga/: basicfifo.v  cache_controller.v  calcline.v  char_display.v  comgen_test.v  command_decoder.v  command_fifo.v  div.v  drawline.v  fifo_arbiter.v  frameblock_controller.v  impl.pdc  impl.sdc  lcd_controller.v  lcd_driver.v  lcd_interface.v  mem_controller.v  precalc.v  spi_controller.v  test_cache_controller.v  test_drawline.v  test_mem_controller.v  test_spi.v  test_top.v  top.v  triangle_assembly.v  triangle_fifo.v  triangle_tester.v  trigen_test.v  try_lcd_controller.v  try_triangle_render.v
fpga/ip cfg/: char_ram.cfg  font_rom.cfg  font_rom.hex  frameblock_ram.cfg  init_rom.cfg  lcd_init_rom_mch.hex  lru_ram.cfg  pll36.cfg
tools/: char_ram.hex  char_ram.py  lcd_init_rom.hex  lcd_init_rom.py  precalc.py
